--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject_Group_1"
         tools:targetApi="31">
+
+        <receiver
+            android:name=".ReminderReceiver"
+            android:exported="false" />
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
