--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject_Group_1"
         tools:targetApi="31">
+
+        <activity
+            android:name=".FriendsListActivity"
+            android:exported="false" />
         <activity
             android:name=".RegistrationActivity"
             android:exported="false" />
